--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
           content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
           href="style.css">
+    <link rel="preconnect"
+          href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap"
+          rel="stylesheet">
     <title>404 Not Found</title>
 </head>
 
