--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
           href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap"
           rel="stylesheet">
+    <link rel="icon"
+          href="./image(38).png">
     <title>404 Not Found</title>
 </head>
 
